--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,27 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/static/$1",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
     },
     { 
       "src": "/(.*)", 
-      "dest": "/index.html" 
+      "dest": "/index.html",
+      "headers": {
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
     }
   ],
   "framework": "create-react-app",
   "env": {
     "REACT_APP_API_URL": "https://todo-server-9nwr.onrender.com"
+  },
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "regions": ["fra1"],
+  "github": {
+    "silent": true
   }
 }
